# YouTube-Auto-Subtitle

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  pyproject.toml  qwen3_asr.py  youtube_subtitle.py
asr/: __init__.py  base.py  funasr.py  qwen.py  utils.py  vad.py  whisper.py
